# NeuralCompression

./: .gitignore  README.md  inference.py  inference_time.py  neuralcompression_test.py  recall.py  setup.py  test.py  train.py
benchmark/: README.md  analysis.ipynb  commands.sh  gpu_inference.py  grid.py  result.csv  run_noloader.sh
checkpoints/: decoder_2000.pt  encoder_2000.pt
data/: copy_files.ipynb  outer_12-2_0-1_AuAu200_170kHz_10C_Iter2_3143.xml_TPCMLDataInterface_7.npy  outer_12-2_10-0_AuAu200_170kHz_10C_Iter2_3116.xml_TPCMLDataInterface_4.npy  outer_12-2_10-1_AuAu200_170kHz_10C_Iter2_3073.xml_TPCMLDataInterface_2.npy  outer_12-2_2-0_AuAu200_170kHz_10C_Iter2_3093.xml_TPCMLDataInterface_8.npy  outer_12-2_2-0_AuAu200_170kHz_10C_Iter2_3174.xml_TPCMLDataInterface_7.npy  outer_12-2_4-0_AuAu200_170kHz_10C_Iter2_3068.xml_TPCMLDataInterface_9.npy  outer_12-2_8-1_AuAu200_170kHz_10C_Iter2_3094.xml_TPCMLDataInterface_5.npy  outer_12-2_8-1_AuAu200_170kHz_10C_Iter2_3096.xml_TPCMLDataInterface_8.npy  sample_metric_results.csv  samples.tgz  test.txt
inference_time/: analysis.ipynb  commands.sh  inference_time.py  inference_time_noloader.py
results/: compressed.tgz  compressed_0.npz  compressed_1.npz  compressed_2.npz  compressed_3.npz  compressed_4.npz  compressed_5.npz  compressed_6.npz  compressed_7.npz  decompressed.tgz  decompressed_0.npz  decompressed_1.npz  decompressed_2.npz  decompressed_3.npz  decompressed_4.npz  decompressed_5.npz  (+2 more)
test/scripts/: CMakeLists.txt  test_tpc_bcae.cpp  test_tpc_bcae_decoder.cpp  test_tpc_bcae_encoder.cpp  test_tpc_blocks.cpp
(+906 files in other folders)
